--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -8,3 +8,29 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  line-height: 18px;
+  color: #555;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  margin-left: 8px;
+  opacity: 0.5;
+}
+
+h8 {
+  margin: 5px;
+  padding: 2px;
+  font-size: 16px;
+  color: rgb(1, 68, 239);
+  text-align: center;
+  /*text-decoration: bold;*/
+  background-color: rgb(255, 255, 255);
+}
